css/about.css
/* ... */
.heritage-title-box h2 {
    color: var(--second-color-a);
    font-size: 1.2rem;
}


/* End of Heritage */

/* customers */

.customers {
    margin-top: 40px;
    padding: 40px 0;
    background: linear-gradient(rgba(0, 0, 0, 0.1), white);
}

.customer {
    background: var(--second-color-a);
    padding: 35px;
    text-align: center;
    margin: 26px 0;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
    cursor: pointer;
    transition: var(--transition);
}



.rating {
    margin: 10px 0;
    color: var(--yellow);
}

.customer h3 {
    font-size: 25px;
    color: var(--main-color);
}

.customer p {
    color: white;
    opacity: 0.7;
    line-height: 1.8;
    width: 60%;
    margin: 0 auto;
}

.customer img {
    width: 200px;
    height: 200px;
    margin: 1rem auto;
    border-radius: 50%;
    border: .5rem solid white;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);

}


.customer span {
    font-weight: 700;
    opacity: 0.7;
    color: whitesmoke;
}

.customer:hover {
    transform: translateY(-18px);
}

@media(min-width: 992px) {
    .customers-container {
        display: flex;
        flex-wrap: wrap;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 30px;
    }
}

@media(min-width: 1370px) {
    .customers-container {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 30px;
    }
}

@media(max-width: 500px) {
    .customer p {
        width: 100%;
    }

    .customer img {
        width: 150px;
        height: 150px;
    }
}

/* footer */
.footer {
    background: var(--dark);
    color: #fff;
    text-align: center;
}

.footer-container {
    width: 85vw;
    margin: 0 auto;
    padding: 30px 0;
}

.footer-container p,
.footer-container a,
.footer-container span {
    opacity: 0.8;
}

.footer a {
    display: block;
    color: #fff;
    text-decoration: none;
}

.social-icons {
    list-style: none;
    display: flex;
    justify-content: center;
    padding: 15px 0;
}

.social-icons li {
    margin: 0 10px;
    width: 50px;
    height: 50px;
    background: #2e2e2e;
    border-radius: 50%;
    transition: var(--transition);
    cursor: pointer;
}

.social-icons li:hover {
    background: #fff;
    color: #2e2e2e;
}

.contact-item span {
    display: block;
}

@media(min-width: 900px) {
    .footer-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 20px;
    }
}

@media(min-width: 1170px) {
    .footer {
        text-align: left;
    }

    .footer-container {
        grid-template-columns: repeat(4, 1fr);
    }

    .footer-container div:nth-child(1) p {
        padding-right: 20px;
    }

    .contact-item {
        display: grid;
        grid-template-columns: 10% 90%;
        margin-bottom: 15px;
        align-items: center;
    }
}

.showModal {
    position: fixed;
    background: transparent;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 5;
}


/* wave footer */

.container-wave {
    position: inherit;
    width: 100%;
    height: auto;
  }
  
  .wave {
    position: absolute;
    bottom: 0;
    height: 120px;
    width: 100%;
    background: url('../img/wave-b.png') repeat-x;
    background-size: 250rem 30rem;
    animation: animate 15s linear infinite;
  }
  
  @keyframes  animate {
    0% {
      background-position-x: 0;
      background-position-x: -250rem;
    }
  }
  
  .wave:nth-child(1) {
    opacity: 0.9;
  }
  
  .wave:nth-child(2) {
    opacity: 0.5;
    animation-delay: 0.2s;
    animation-direction: reverse;
  }
  
  .wave:nth-child(3) {
    opacity: 0.7;
    animation-delay: 5s;
  }


/* end of wave footer */


/* End of Home */


/* Food Section */

/* End of Food Section */


.container {
    padding: 1rem;
	width: 1000px;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
}
.container .btn {
	position: relative;
	top: 0;
	left: 0;
	width: 250px;
	height: 50px;
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;
}
.container .btn a {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	background: rgba(255, 255, 255, 0.05);
	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
	border-top: 1px solid rgba(255, 255, 255, 0.1);
	border-radius: 30px;
	padding: 10px;
	letter-spacing: 1px;
	text-decoration: none;
	overflow: hidden;
	color: var(--main-color);
	font-weight: 400px;
	z-index: 1;
	transition: 0.5s;
	backdrop-filter: blur(15px);
}
.container .btn:hover a {
	letter-spacing: 3px;
    color: white;
}
.container .btn a::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	width: 50%;
	height: 100%;
	background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
	transform: skewX(45deg) translate(0);
	transition: 0.5s;
	filter: blur(0px);
}
.container .btn:hover a::before {
	transform: skewX(45deg) translate(200px);
}
.container .btn::before {
	content: "";
	position: absolute;
	left: 50%;
	transform: translatex(-50%);
	bottom: -5px;
	width: 30px;
	height: 10px;
	background: var(--main-color);
	border-radius: 10px;
	transition: 0.5s;
	transition-delay: 0.5;
}
.container .btn:hover::before /*lightup button*/ {
	bottom: 0;
	height: 50%;
	width: 80%;
	border-radius: 30px;
    color: white;
}

.container .btn::after {
	content: "";
	position: absolute;
	left: 50%;
	transform: translatex(-50%);
	top: -5px;
	width: 30px;
	height: 10px;
	background: var(--main-color);
	border-radius: 10px;
	transition: 0.5s;
	transition-delay: 0.5;
}
.container .btn:hover::after /*lightup button*/ {
	top: 0;
	height: 50%;
	width: 80%;
	border-radius: 30px;
    color: white;
}
/* ... */

